# okutils

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt  setup.linux.py  setup.py
.github/workflows/: codeql-analysis.yml  publish-release.yml  test.yml
lib/: funcs.cpp  utils.cpp  utils.win.cpp
okutils/collections/: groupby.py
okutils/hash/: __init__.py  hashbase.py  jsonhash.py
okutils/sdm/: __init__.py  decoders.py  encoders.py  reader.py  writer.py
src/hash/: jsonhash.py
tests/: sdm_tests.py  tools_tests.py  utils.py
