[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okutils"
version = "1.0.3"
description = "a python utils"
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["utils"]

authors = [
    { name = "skiloop", email = "skiloop@gmail.com" }
]

classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/skiloop/okutils"
repository = "https://github.com/skiloop/okutils"

[tool.setuptools]
platforms = ["x86_64", "aarch64"]

[tool.cibuildwheel]
archs = "x86_64"
skip = "*i686 *win32 *armv7l"
